# holochain-stencil-template

./: Cargo.toml  README.md  package-lock.json  package.json
dnas/hello_world/workdir/: dna.yaml
dnas/hello_world/zomes/coordinator/hello/: Cargo.toml
dnas/hello_world/zomes/coordinator/hello/src/: all_hellos.rs  hello.rs  lib.rs
dnas/hello_world/zomes/integrity/hello/: Cargo.toml
dnas/hello_world/zomes/integrity/hello/src/: lib.rs
tests/: .gitignore  package.json
tests/src/hello_world/hello/: all-hellos.test.ts
ui/src/hello_world/hello/: AllHellos.vue
ui/stencil/: package.json  stencil.config.ts  tsconfig.json
ui/stencil/src/: components.d.ts  index.ts
ui/stencil/src/components/app/app-home/: app-home.css  app-home.tsx  readme.md
ui/stencil/src/components/app/app-root/: app-root.tsx  readme.md
ui/stencil/src/components/atoms/loading-spinner/: loading-spinner.tsx  readme.md
ui/stencil/src/components/atoms/loading-spinner/test/: loading-spinner.e2e.ts  loading-spinner.spec.tsx
ui/stencil/src/global/: app.css
ui/stencil/src/globals/: router.ts
ui/stencil/src/store/: store.ts
ui/stencil/src/types/: entryTypes.ts
ui/vite/: index.html  package-lock.json  package.json  vite.config.ts
ui/vite/src/: main.ts
workdir/: happ.yaml  web-happ.yaml
