[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.4"
hdk = "=0.1.4"
serde = "=1.0.166"

[workspace.dependencies.hello]
path = "dnas/hello_world/zomes/coordinator/hello"

[workspace.dependencies.hello_integrity]
path = "dnas/hello_world/zomes/integrity/hello"
